Actions
Bug #10723
closedhci1394: NULL pointer errors
Start date:
2019-04-10
Due date:
% Done:
100%
Estimated time:
Difficulty:
Medium
Tags:
Gerrit CR:
Description
NULL pointer errors:
../../common/io/1394/adapters/hci1394_ixl_update.c: In function 'hci1394_ixl_update_prep_recv_pkt': ../../common/io/1394/adapters/hci1394_ixl_update.c:1013:47: error: comparison between pointer and integer [-Werror] if ((new_xfer_pkt_ixlp->ixl_buf.ixldmac_addr == NULL) || ^~ ../../common/io/1394/adapters/hci1394_ixl_update.c: In function 'hci1394_ixl_update_prep_recv_buf': ../../common/io/1394/adapters/hci1394_ixl_update.c:1152:47: error: comparison between pointer and integer [-Werror] if ((new_xfer_buf_ixlp->ixl_buf.ixldmac_addr == NULL) || ^~ ../../common/io/1394/adapters/hci1394_ixl_update.c: In function 'hci1394_ixl_update_prep_send_pkt': ../../common/io/1394/adapters/hci1394_ixl_update.c:1261:47: error: comparison between pointer and integer [-Werror] if ((new_xfer_pkt_ixlp->ixl_buf.ixldmac_addr == NULL) || ^~ ../../common/io/1394/adapters/hci1394_ixl_update.c: In function 'hci1394_ixl_update_prep_send_buf': ../../common/io/1394/adapters/hci1394_ixl_update.c:1427:47: error: comparison between pointer and integer [-Werror] if ((new_xfer_buf_ixlp->ixl_buf.ixldmac_addr == NULL) || ^~ ../../common/io/1394/adapters/hci1394_ixl_comp.c: In function 'hci1394_compile_ixl_init': ../../common/io/1394/adapters/hci1394_ixl_comp.c:182:23: error: assignment makes integer from pointer without a cast [-Werror=int-conversion] ctxtp->dma_mem_execp = NULL; ^ ../../common/io/1394/adapters/hci1394_ixl_comp.c: In function 'hci1394_set_next_xfer_buf': ../../common/io/1394/adapters/hci1394_ixl_comp.c:2389:11: error: comparison between pointer and integer [-Werror] if (bufp == NULL) { ^~ ../../common/io/1394/adapters/hci1394_ixl_comp.c: In function 'hci1394_alloc_storevalue_dma_mem': ../../common/io/1394/adapters/hci1394_ixl_comp.c:2578:10: error: return makes integer from pointer without a cast [-Werror=int-conversion] return (NULL); ^ cc1: all warnings being treated as errors
Updated by Electric Monk about 3 years ago
- Status changed from In Progress to Closed
- % Done changed from 90 to 100
git commit ffc2b7d4ae69a2eeeab283452dc5c0d70ce7519f
commit ffc2b7d4ae69a2eeeab283452dc5c0d70ce7519f Author: Toomas Soome <tsoome@me.com> Date: 2019-04-22T20:17:01.000Z 10723 hci1394: NULL pointer errors Reviewed by: Robert Mustacchi <rm@joyent.com> Approved by: Dan McDonald <danmcd@joyent.com>
Actions